# agent-007

./: # Agent-007.md  .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  task.txt  test.txt
.github/workflows/: ghcr.yml
backend/app/: cron.py  main.py  observability.py  points.py  state.py  timezones.py
backend/app/agent/: __init__.py  orchestrator.py  retrieval.py
backend/app/api/: auth.py  events.py  inputs.py  kotx.py  labels.py  notes.py  notifications.py  oauth.py  points.py  poll.py  search.py  settings.py  tasks.py  webhooks.py
backend/app/auth/: __init__.py  base.py  google.py  google_tokens.py  middleware.py  notion_mcp.py  (+1 more)
backend/migrations/: env.py
backend/scripts/: dump_calendar_labels.py
backend/tests/: test_agent_due_date_rounding.py  test_calendar_cache_snippet.py  test_calendar_ha_next_event.py  test_calendar_update_tool.py  test_chat_runner.py  test_commute_legs.py  test_document_cache.py  test_drive_search.py  test_github_client.py  test_gmail_preprocess_markdown.py  test_google_health_sleep.py  test_google_oauth_scope.py  test_google_tokens.py  test_input_min_chars.py  test_kotx_consolidation.py  test_llm_adapter.py  test_llm_tracing.py  test_manual_open.py  test_manual_runner.py  test_manual_task_creation.py  test_new_input_prompt.py  test_notes_api.py  test_notion_mcp_client.py  test_notion_mcp_oauth.py  test_observability.py  test_orchestrator_trace.py  test_points_events.py  test_reminders.py  test_retrieval.py  test_retrieve.py  test_route_cache_locations.py  test_route_resolver.py  test_scheduled_date.py  test_search_filters.py  test_slack_fetch_resilience.py  test_source_url.py  test_suggest_dedup.py  test_task_actions.py  test_task_linked_inputs.py  test_trip_block.py  (+1 more)
config/: README.md  chat_context.md.example  labels.toml.example  points.yaml.example
docs/: kotx-consolidation-prompt.md  search-plan.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_raw_input_embedding.py  0004_task_calendar_event_id.py  0007_notes_table.py
scripts/: dev-stop.sh  dev.sh  setup.sh
src/app/: config.py  db.py  embeddings.py  labels.py  main.py  notifications.py  runtime_state.py
terraform/: .terraform.lock.hcl  cloud-config.yml  main.tf
tests/: test_auth_middleware.py  test_plan_schedule.py  test_slack_preprocess.py
(+451 files in other folders)
