[project]
name = "task-agent"
version = "0.1.0"
description = "Personal task-extraction agent over semi-structured inputs"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "authlib>=1.3",
    "httpx>=0.27",
    "cryptography>=48.0.1",
    "rq>=2.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    # PDF text extraction for the Drive file reader (Office formats use lxml).
    "pypdf>=5.1",
    "itsdangerous>=2.2",
    "pyyaml>=6.0",
    # Bundled IANA timezone database — `zoneinfo.ZoneInfo("Europe/Berlin")`
    # otherwise raises on minimal Python images that omit /usr/share/zoneinfo,
    # silently degrading every planner/notification path to UTC.
    "tzdata>=2024.1",
    "haystack-ai>=2.30.2",
    "anthropic-haystack>=5.11.0",
    "mcp>=1.10",
    "langfuse>=4,<5",
    "google-genai-haystack>=4.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend"]

[tool.setuptools.package-data]
# Ship the test-UI HTML alongside the python package so non-editable installs
# can serve it. Editable installs would also work via the real src path, but
# this keeps both install modes consistent.
app = ["static/*"]
